Implement logic for dumping env vars and validating them
